proj1/tests/other-tests/oskis-angels_tests/correct/equals-arith1.py
a = 6
b = 2
print a / 3 == b # True
